--- a/form-quack-ui/package.json
+++ b/form-quack-ui/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@sentry/nextjs": "^9.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
